--- a/team-ios-koth/Info.plist
+++ b/team-ios-koth/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>pls</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>idk</string>
 	<key>CFBundleDisplayName</key>
 	<string>KOTH</string>
 	<key>CFBundleExecutable</key>
@@ -22,8 +26,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>We are using your location</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
